--- a/hello-world-ext/manifest.json
+++ b/hello-world-ext/manifest.json
@@ -1,10 +1,28 @@
 {
-    "name": "Hello Extensions",
-    "description": "Base Level Extension",
+    "name": "Email Writer Assitant",
+    "description": "AI-powered email reply generator",
     "version": "1.0",
     "manifest_version": 3,
+    "permissions": ["activeTab", "storage"],
+    "host_permissions": [
+        "http://localhost:8080/*",
+        "*://mail.google.com/*"
+    ],
+    "content_scripts": [
+        {
+        "js": ["content.js"],
+        "matches": ["*://mail.google.com/*"],
+        "css": ["content.css"],
+        "run_at": "document_end"
+        }
+    ],
+    "web_accessible_resources": [
+    {
+      "resources": [ "icons/*" ],
+      "matches": ["*://mail.google.com/*"]
+    }
+  ],
     "action": {
-      "default_popup": "hello.html",
-      "default_icon": "hello_extensions.png"
+      "default_title": "Email Writer Assitant"
     }
   }
